--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
 
     <section class="picker-card">
       <div class="uploader uploader-compact">
-        <input id="file-input" type="file" accept=".nii,.nii.gz,.h5,.hdf5,application/gzip,application/octet-stream" />
+        <input id="file-input" type="file" accept=".nii,.nii.gz,application/gzip,application/octet-stream" />
         <label for="file-input" class="button">Choose file</label>
       </div>
     </section>
