Improve preview placeholder and export

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -83,7 +83,8 @@
             <h3>Augmentation preview</h3>
           </div>
           <div class="panel-slot panel-large">
-            <img id="preview-image" class="preview-image" alt="Augmentation preview" />
+            <img id="preview-image" class="preview-image is-hidden" alt="Augmentation preview" />
+            <div class="preview-placeholder" id="preview-placeholder">Preview appears here</div>
           </div>
         </div>
       </div>
