--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,7 @@
         <div class="uploader uploader-compact">
           <input id="file-input" type="file" accept=".nii,.nii.gz,application/gzip,application/octet-stream" />
           <label for="file-input" class="button">Choose file</label>
+          <span class="file-meta" id="file-meta">No file selected.</span>
         </div>
       </section>
     </div>
